umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_2-3-dichloropentane-partial.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:error "resolution underdetermined" :success false}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#h#v3#T0" "Cl#n3#v" "C#h#v3" "Cl#n3#v" "C#h2#v2" "C#h3#v"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [1 3 :single]
        [3 4 :single]
        [3 5 :single]
        [5 6 :single]]
      :stereo-atoms [{:ligands [0 2 3 [:h 1]] :site 1 :type :ccw}]}
    :success true}}
