umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_2r3e-pent-3-en-2-ol.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#h#v3#T1" "O#h#n2#v" "C#h#v3" "C#h#v3" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 :single] [3 4 "2#C1"] [4 5 :single]]
      :stereo-atoms [{:attrs :cw :ligands [0 2 3 [:h 1]] :site 1}]
      :stereo-bonds [{:attrs :e :ligands [1 [:h 3] 5 [:h 4]] :site 3}]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#h#v3#T1" "O#h#n2#v" "C#h#v3" "C#h#v3" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 :single] [3 4 "2#C1"] [4 5 :single]]
      :stereo-atoms [{:attrs :cw :ligands [0 2 3 [:h 1]] :site 1}]
      :stereo-bonds [{:attrs :e :ligands [1 [:h 3] 5 [:h 4]] :site 3}]}
    :success true}}
