umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_2s3s-dichlorobutane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#h#v3#T0" "Cl#n3#v" "C#h#v3#T1" "Cl#n3#v" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 :single] [3 4 :single] [3 5 :single]]
      :stereo-atoms [
        {:ligands [0 2 3 [:h 1]] :site 1 :type :ccw}
        {:ligands [1 4 5 [:h 3]] :site 3 :type :cw}]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#h#v3#T0" "Cl#n3#v" "C#h#v3#T1" "Cl#n3#v" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 :single] [3 4 :single] [3 5 :single]]
      :stereo-atoms [
        {:ligands [0 2 3 [:h 1]] :site 1 :type :ccw}
        {:ligands [1 4 5 [:h 3]] :site 3 :type :cw}]}
    :success true}}
