umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_alpha-d-glucopyranose.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms [
        "O#h#n2"
        "C#h2"
        "C#h"
        "O#n2"
        "C#h"
        "O#h#n2"
        "C#h"
        "O#h#n2"
        "C#h"
        "O#h#n2"
        "C#h"
        "O#h#n2"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 10 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [4 6 :single]
        [6 7 :single]
        [6 8 :single]
        [8 9 :single]
        [8 10 :single]
        [10 11 :single]]
      :stereo-atoms [
        {:attrs :cw :ligands [1 3 10 [:h 2]] :site 2}
        {:attrs :ccw :ligands [3 5 6 [:h 4]] :site 4}
        {:attrs :ccw :ligands [4 7 8 [:h 6]] :site 6}
        {:attrs :cw :ligands [6 9 10 [:h 8]] :site 8}
        {:attrs :ccw :ligands [2 8 11 [:h 10]] :site 10}]}
    :success true
    :tie-breaks [0 1 5 7 9 11]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 ["O#h#n2#v#d0#t0#a!#m!" "O#n2#u#v#d0#t0#a!#m!"]
      1 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      5 ["O#h#n2#v#d0#t0#a!#m!" "O#n2#u#v#d0#t0#a!#m!"]
      7 ["O#h#n2#v#d0#t0#a!#m!" "O#n2#u#v#d0#t0#a!#m!"]
      9 ["O#h#n2#v#d0#t0#a!#m!" "O#n2#u#v#d0#t0#a!#m!"]
      11 ["O#h#n2#v#d0#t0#a!#m!" "O#n2#u#v#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {
      :atoms [
        "O#h#n2"
        "C#h2"
        "C#h"
        "O#n2"
        "C#h"
        "O#h#n2"
        "C#h"
        "O#h#n2"
        "C#h"
        "O#h#n2"
        "C#h"
        "O#h#n2"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 10 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [4 6 :single]
        [6 7 :single]
        [6 8 :single]
        [8 9 :single]
        [8 10 :single]
        [10 11 :single]]
      :stereo-atoms [
        {:attrs :cw :ligands [1 3 10 [:h 2]] :site 2}
        {:attrs :ccw :ligands [3 5 6 [:h 4]] :site 4}
        {:attrs :ccw :ligands [4 7 8 [:h 6]] :site 6}
        {:attrs :cw :ligands [6 9 10 [:h 8]] :site 8}
        {:attrs :ccw :ligands [2 8 11 [:h 10]] :site 10}]}
    :success true
    :tie-breaks [0 1 5 7 9 11]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 ["O#n2#u#v#a!" "O#h#n2#v#a!"]
      1 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      5 ["O#n2#u#v#a!" "O#h#n2#v#a!"]
      7 ["O#n2#u#v#a!" "O#h#n2#v#a!"]
      9 ["O#n2#u#v#a!" "O#h#n2#v#a!"]
      11 ["O#n2#u#v#a!" "O#h#n2#v#a!"]}}}
