umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@stereo_tetrahedral_cfclbri-unknown.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["F#n3" "C" "Cl#n3" "Br#n3" "I#n3"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 :single] [1 4 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :atoms ["F#n3" "C" "Cl#n3" "Br#n3" "I#n3"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 :single] [1 4 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :atoms ["F#n3" "C" "Cl#n3" "Br#n3" "I#n3"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 :single] [1 4 :single]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :atoms ["F#n3" "C" "Cl#n3" "Br#n3" "I#n3"]
      :bonds [[0 1 :single] [1 2 :single] [1 3 :single] [1 4 :single]]}
    :success true
    :tie-breaks []}}
